--- a/web/package.json
+++ b/web/package.json
@@ -14,7 +14,8 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-less": "^3.1.0",
-    "gulp-watch": "^4.3.8"
+    "gulp-watch": "^4.3.8",
+    "merge-stream": "1.0.0"
   },
   "dependencies": {
     "ui-navbar": "^0.4.3"
