--- a/myapp/bower.json
+++ b/myapp/bower.json
@@ -19,7 +19,8 @@
     "angular": "~1.5.3",
     "fabric.js": "fabric#^1.6.4",
     "ui-router-metatags": "^1.0.3",
-    "ng-file-upload": "^12.2.9"
+    "ng-file-upload": "^12.2.9",
+    "angular-local-storage": "^0.5.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
