--- a/myapp/bower.json
+++ b/myapp/bower.json
@@ -20,7 +20,8 @@
     "fabric.js": "fabric#^1.6.4",
     "ui-router-metatags": "^1.0.3",
     "ng-file-upload": "^12.2.9",
-    "angular-local-storage": "^0.5.0"
+    "angular-local-storage": "^0.5.0",
+    "lodash": "^4.16.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
