--- a/myapp/bower.json
+++ b/myapp/bower.json
@@ -21,7 +21,7 @@
     "ui-router-metatags": "^1.0.3",
     "ng-file-upload": "^12.2.9",
     "angular-local-storage": "^0.5.0",
-    "lodash": "^4.16.1"
+    "lodash": "~2.4.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
