Change back to web app

--- a/.htaccess
+++ b/.htaccess
@@ -25,6 +25,16 @@ ExpiresDefault "access 1 month"
    php_value post_max_size 40M
 </IfModule>
 
+
 <IfModule mod_headers.c>
     Header set Access-Control-Allow-Origin *
 </IfModule>
+
+RewriteEngine On  
+  # If an existing asset or directory is requested go to it as it is
+  RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -f [OR]
+  RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -d
+  RewriteRule ^ - [L]
+
+  # If the requested resource doesn't exist, use index.html
+  RewriteRule ^ /web/index.html
